<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CCCCCC"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/display1"
            android:textSize="30sp"
            android:gravity="end"
            android:background="#89ABF4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <TextView
            android:id="@+id/display2"
            android:textSize="30sp"
            android:gravity="end"
            android:background="#89ABF4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:text="@string/memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>

            <TextView
                android:id="@+id/memory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingTop="46sp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">


                <Button
                    android:onClick="premutoC"
                    android:text="@string/c"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>

                <Button
                    android:onClick="premutoMC"
                    android:text="@string/mc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>

                <Button
                    android:onClick="premutoMS"
                    android:text="@string/ms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                </Button>

                <Button
                    android:onClick="premutoMR"
                    android:text="@string/mr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                </Button>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>


                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </Button>

                    <Button
                        android:onClick="operatorClicked"
                        android:text="+"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:onClick="operatorClicked"
                        android:text="-"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                    </Button>

                    <Button
                        android:onClick="operatorClicked"
                        android:text="*"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:onClick="pointClicked"
                        android:text="."
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:onClick="digitClicked"
                        android:text="@string/_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:onClick="equalClicked"
                        android:text="="
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>

                    <Button
                        android:onClick="operatorClicked"
                        android:text="/"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                    </Button>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
